# cmake_examples

./: README.md
example_1_executable/: CMakeLists.txt
example_2_executable_dirs/: CMakeLists.txt
example_2_executable_dirs/src/: CMakeLists.txt  hello.cc  use_hello.cc
example_3_library_static/: CMakeLists.txt
example_3_library_static/src/: CMakeLists.txt  helloConfig.cmake
example_4_library_shared/: CMakeLists.txt
example_4_library_shared/src/: CMakeLists.txt  hello.h  hello_sharedConfig.cmake
example_5_exe_link_lib/src/: CMakeLists.txt
example_6_exe_link_lib/: CMakeLists.txt
example_6_exe_link_lib/src/: CMakeLists.txt
example_7_lib_beatit/: CMakeLists.txt
example_7_lib_beatit/src/: CMakeLists.txt  beatit.cc  beatit.h
example_8_exe_link_lib/run/: use_beatit.x
example_8_exe_link_lib/src/: CMakeLists.txt  use_beatit.cc
example_9_lib_exe/: CMakeLists.txt
example_9_lib_exe/src_exe/: CMakeLists.txt  use_libs.cc
example_9_lib_exe/src_lib/: CMakeLists.txt  hello_shared9Config.cmake
